kubedefs/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels: 
    app: vprodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
      - name: vprodb
        image: kubemma/vprofiledb
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: vprodb-port
        ports:
        - name: vprodb-port
        - containerPort: 3306
      volumes:
        - name: vpro-db-data
          persistentVolumeClaim:
            claimName: db-pv-claim
