kubedefs/appingress.yaml
apiVersion: networking.k8s.io/v1
#kind: apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpro-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    name: myingress
spec:
  ingressClassName: Nginx 
  rules:
  - host: kubevpro.emmadev.live
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vproapp-service
            port: 
              number: 8080
